force-app/main/default/objects/CaseItem__c/CaseItem__c.object-meta.xml
<CustomObject>
    <description>[a01][CaseItem__c] Itens relacionados ao caso.</description>
    <label>Item do caso</label>
    <nameField>
        <label>Número Item do caso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens do caso</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>