force-app/main/default/objects/CaseItem__c/fields/CaseMdt__c.field-meta.xml
<CustomField>
    <fullName>CaseMdt__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Itens do caso</relationshipLabel>
    <relationshipName>Itens_do_caso</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>