force-app/main/default/objects/CaseItem__c/fields/CommentsTxt__c.field-meta.xml
<CustomField>
    <fullName>CommentsTxt__c</fullName>
    <label>Observação</label>
    <type>TextArea</type>
</CustomField>