force-app/main/default/objects/CaseItem__c/fields/CustomIDTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIDTxt__c</fullName>
    <description>[Case Id + Product Id]</description>
    <externalId>true</externalId>
    <label>Id customizado</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>