force-app/main/default/objects/CaseItem__c/fields/FailureTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>FailureTypeTxt__c</fullName>
    <label>Tipo de avaria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extravio de produto</fullName>
            </value>
            <value>
                <fullName>Produto faltante</fullName>
            </value>
            <value>
                <fullName>Negociação comercial</fullName>
            </value>
            <value>
                <fullName>Extravio de volume</fullName>
            </value>
            <value>
                <fullName>Código de barras divergente</fullName>
            </value>
            <value>
                <fullName>Danificado dentro embalagem</fullName>
            </value>
            <value>
                <fullName>Deformação</fullName>
            </value>
            <value>
                <fullName>Desbitolamento</fullName>
            </value>
            <value>
                <fullName>Embalagem com produto trocado</fullName>
            </value>
            <value>
                <fullName>Embalagem danificada</fullName>
            </value>
            <value>
                <fullName>Embalagem errada</fullName>
            </value>
            <value>
                <fullName>Liga e não puxa agua</fullName>
            </value>
            <value>
                <fullName>Produto com problema fabricação</fullName>
            </value>
            <value>
                <fullName>Produto Danificado Expedição</fullName>
            </value>
            <value>
                <fullName>Produto danificado transporte</fullName>
            </value>
            <value>
                <fullName>Produto danificado cliente</fullName>
            </value>
            <value>
                <fullName>Produto amassado</fullName>
            </value>
            <value>
                <fullName>Produto com Vazamento</fullName>
            </value>
            <value>
                <fullName>Produto com Bolha</fullName>
            </value>
            <value>
                <fullName>Produto danificado</fullName>
            </value>
            <value>
                <fullName>Produto evaporou</fullName>
            </value>
            <value>
                <fullName>Produto furado</fullName>
            </value>
            <value>
                <fullName>Produto não aquece</fullName>
            </value>
            <value>
                <fullName>Produto não liga</fullName>
            </value>
            <value>
                <fullName>Produto quebrado</fullName>
            </value>
            <value>
                <fullName>Produto queimado</fullName>
            </value>
            <value>
                <fullName>Produto trincado</fullName>
            </value>
            <value>
                <fullName>Super Aquecimento</fullName>
            </value>
            <value>
                <fullName>Tubo sem marcação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>