force-app/main/default/objects/CaseItem__c/fields/ManufacturingCenterTxt__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCenterTxt__c</fullName>
    <label>Centro de fabricação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0100-Fábrica de Sumaré</fullName>
            </value>
            <value>
                <fullName>0600-Fábrica de Joinville - Floresta</fullName>
            </value>
            <value>
                <fullName>0700-Fábrica de Joinville - Glória</fullName>
            </value>
            <value>
                <fullName>0870-Fábrica de Anápolis</fullName>
            </value>
            <value>
                <fullName>0900-Fábrica de Suape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>