force-app/main/default/objects/CaseItem__c/fields/ProductActivitySectorTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductActivitySectorTxt__c</fullName>
    <label>Setor atividade produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-Família produtos 01</fullName>
            </value>
            <value>
                <fullName>46-Setor Comum</fullName>
            </value>
            <value>
                <fullName>54-Serviços</fullName>
            </value>
            <value>
                <fullName>B1-Broker</fullName>
            </value>
            <value>
                <fullName>CO-Composto</fullName>
            </value>
            <value>
                <fullName>CR-Construção</fullName>
            </value>
            <value>
                <fullName>EB-Embalagem</fullName>
            </value>
            <value>
                <fullName>GE-Geomecânico</fullName>
            </value>
            <value>
                <fullName>IA-Industria</fullName>
            </value>
            <value>
                <fullName>ID-Item Descontinuado</fullName>
            </value>
            <value>
                <fullName>IE-Infra-Estrutura</fullName>
            </value>
            <value>
                <fullName>IN-Industrial</fullName>
            </value>
            <value>
                <fullName>IR-Irrigação</fullName>
            </value>
            <value>
                <fullName>MM-Material Manutenção</fullName>
            </value>
            <value>
                <fullName>MP-Matéria Prima</fullName>
            </value>
            <value>
                <fullName>PR-Predial</fullName>
            </value>
            <value>
                <fullName>RF-Refugo</fullName>
            </value>
            <value>
                <fullName>SC-Sucata</fullName>
            </value>
            <value>
                <fullName>SE-Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>