force-app/main/default/objects/CaseItem__c/fields/ProductChangedLkp__c.field-meta.xml
<CustomField>
    <fullName>ProductChangedLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto trocado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens do caso (Produto trocado)</relationshipLabel>
    <relationshipName>Itens_do_caso1</relationshipName>
    <type>Lookup</type>
</CustomField>