force-app/main/default/objects/CaseItem__c/fields/ProductDistributionChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductDistributionChannelTxt__c</fullName>
    <label>Canal distribuição produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-Can.distribuição 01</fullName>
            </value>
            <value>
                <fullName>03-Exportação</fullName>
            </value>
            <value>
                <fullName>06-Intercompany</fullName>
            </value>
            <value>
                <fullName>07-Nacional</fullName>
            </value>
            <value>
                <fullName>16-Canal Comun</fullName>
            </value>
            <value>
                <fullName>CC-Atendimento Mexichem</fullName>
            </value>
            <value>
                <fullName>EX-Exportação</fullName>
            </value>
            <value>
                <fullName>RV-Repres/Vendedor</fullName>
            </value>
            <value>
                <fullName>VD-Venda Direta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>