force-app/main/default/objects/CaseItem__c/fields/ProductLkp__c.field-meta.xml
<CustomField>
    <fullName>ProductLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens do caso</relationshipLabel>
    <relationshipName>Itens_do_caso</relationshipName>
    <type>Lookup</type>
</CustomField>