force-app/main/default/objects/CaseItem__c/fields/ProductSalesOfficeTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesOfficeTxt__c</fullName>
    <label>Escritório vendas produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0010-Regional Sul</fullName>
            </value>
            <value>
                <fullName>0020-Regional SP Capital</fullName>
            </value>
            <value>
                <fullName>0030-Regional RJ/ES</fullName>
            </value>
            <value>
                <fullName>0040-Regional Nordeste</fullName>
            </value>
            <value>
                <fullName>0050-Regional SP Interior</fullName>
            </value>
            <value>
                <fullName>0060-Regional MG</fullName>
            </value>
            <value>
                <fullName>0070-REgional CO/NO</fullName>
            </value>
            <value>
                <fullName>0090-Venda Direta</fullName>
            </value>
            <value>
                <fullName>0100-Exportação</fullName>
            </value>
            <value>
                <fullName>0110-Regional Irriga</fullName>
            </value>
            <value>
                <fullName>0120-Regional Construtora</fullName>
            </value>
            <value>
                <fullName>0130-Reg Infra Industria</fullName>
            </value>
            <value>
                <fullName>0140-Alphagary</fullName>
            </value>
            <value>
                <fullName>0150-Regional Infra</fullName>
            </value>
            <value>
                <fullName>0160-Assistência Técnica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>