force-app/main/default/objects/CaseItem__c/fields/ProductSalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesOrganizationTxt__c</fullName>
    <label>Organização vendas produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0099-BIDIM</fullName>
            </value>
            <value>
                <fullName>0125-DOUTORES DA CONST.</fullName>
            </value>
            <value>
                <fullName>0141-ALPHAGARY CORP.</fullName>
            </value>
            <value>
                <fullName>0143-PLASTUBOS</fullName>
            </value>
            <value>
                <fullName>0147-MEXICHEM TRADING</fullName>
            </value>
            <value>
                <fullName>0155-BR - CredConstrução</fullName>
            </value>
            <value>
                <fullName>AM01-AMANCO</fullName>
            </value>
            <value>
                <fullName>PL01-OrgV Plastubos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>