force-app/main/default/objects/CaseItem__c/fields/ProductSalesTeamTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesTeamTxt__c</fullName>
    <label>Equipe vendas produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001-Vendedor Interno</fullName>
            </value>
            <value>
                <fullName>002-Representante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>