force-app/main/default/objects/CaseItem__c/fields/QMLkp__c.field-meta.xml
<CustomField>
    <fullName>QMLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QM</label>
    <referenceTo>QM__c</referenceTo>
    <relationshipLabel>Itens do caso</relationshipLabel>
    <relationshipName>Itens_do_caso</relationshipName>
    <type>Lookup</type>
</CustomField>