force-app/main/default/objects/CaseItem__c/fields/QualityProblemTxt__c.field-meta.xml
<CustomField>
    <fullName>QualityProblemTxt__c</fullName>
    <label>Problemas de qualidade</label>
    <length>35</length>
    <type>Text</type>
</CustomField>