force-app/main/default/objects/CaseItem__c/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>false</active>
    <description>Tipo de itens referente a reclamações de produtos.</description>
    <label>Reclamação</label>
</RecordType>