force-app/main/default/objects/CaseItem__c/recordTypes/Devolution.recordType-meta.xml
<RecordType>
    <fullName>Devolution</fullName>
    <active>false</active>
    <description>Tipo de itens referente a devolução de produtos.</description>
    <label>Devolução</label>
</RecordType>