force-app/main/default/objects/CaseItem__c/recordTypes/Replacement.recordType-meta.xml
<RecordType>
    <fullName>Replacement</fullName>
    <active>false</active>
    <description>Tipo de itens referente a Substituição de produtos.</description>
    <label>Reposição</label>
</RecordType>